--- a/manifest.json
+++ b/manifest.json
@@ -36,7 +36,7 @@
         {
             "matches": ["<all_urls>"],
             "js": ["common/browser-polyfill.js", "content/prompt-injecter.js", "content/runScript-injecter.js"],
-            "match_about_blank": true,
+            "match_about_blank": false,
             "all_frames": true,
             "run_at": "document_start"
         }
