--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "description": "Oracle Globalization Automation Technology - Recording IDE",
     "manifest_version": 2,
     "name": "GatIDEX",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "homepage_url": "https://github.com/wangbl11/gatIDEX",
     "options_ui": {
         "page": "panel/options.html",
@@ -16,6 +16,7 @@
     },
 
     "permissions": [
+        "<all_urls>",
         "tabs",
         "activeTab",
         "webRequest",
@@ -31,7 +32,7 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["content/atoms.js", "content/utils.js", "content/selenium-browserbot.js",
+            "js": ["content/atoms.js", "content/utils.js","content/tools.js", "content/selenium-browserbot.js",
                    "common/escape.js", "content/selenium-api.js", "content/locatorBuilders.js",
                    "content/recorder.js", "content/recorder-handlers.js", "content/command-receiver.js",
                    "content/targetSelecter.js", "content/sizzle.js","content/gatide.js"],
@@ -49,8 +50,8 @@
 
     "background":
     {
-        "scripts": ["common/browser-polyfill.js", "background/background.js","common/sockjs.min.js","common/stomp.min.js",
-        "panel/js/background/recorder.js","deps/idb-file-storage.js","background/socketclient.js","background/gatback.js"]
+        "scripts": ["common/uuid.js","background/tools.js","background/displayName.js","common/browser-polyfill.js", "background/background.js","common/sockjs.min.js","common/stomp.min.js",
+        "panel/js/background/recorder.js","deps/idb-file-storage.js","background/gatback.js"]
     },
 
     "browser_action":
